{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 9,
  "lineage": "1ff0c702-ffb7-ce8d-3aba-4ea7b25deafd",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e355bb70-1955-46cd-a287-d16e83f17efe/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "location": "uksouth",
            "name": "aks-nsg",
            "resource_group_name": "networking-resource-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.networking_rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_apiserver_rule",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "6443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e355bb70-1955-46cd-a287-d16e83f17efe/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/kube-apiserver-rule",
            "name": "kube-apiserver-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "157.55.39.9",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking_rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e355bb70-1955-46cd-a287-d16e83f17efe/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/ssh-rule",
            "name": "ssh-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "157.55.39.9",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking_rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "control_plane_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e355bb70-1955-46cd-a287-d16e83f17efe/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/control-plane-subnet",
            "name": "control-plane-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking_rg",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "worker_node_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e355bb70-1955-46cd-a287-d16e83f17efe/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/worker-node-subnet",
            "name": "worker-node-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking_rg",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f17d054f-28a6-48c4-94fb-4bbc57602f5d",
            "id": "/subscriptions/e355bb70-1955-46cd-a287-d16e83f17efe/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks-vnet",
            "location": "uksouth",
            "name": "aks-vnet",
            "resource_group_name": "networking-resource-group"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking_rg"
          ]
        }
      ]
    }
  ]
}